--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "scripts": {
         "test": "jest",
         "start": "node index.js",
+        "db:migrate": "sequelize db:migrate",
+        "db:migrate:rollback": "sequelize db:migrate:undo:all",
+        "db:seed": "sequelize-cli db:seed:all",
+        "db:seed:one": "sequelize db:seed --seed",
+        "db:seed:undo": "sequelize-cli db:seed:undo",
+        "db:seed:make": "sequelize-cli seed:generate --name",
         "heroku-release": "node_modules/.bin/sequelize db:migrate && node_modules/.bin/sequelize db:seed:all"
+
     },
     "author": "",
     "license": "ISC",
