+ finish testing item.test.js

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
+        "test": "jest --detectOpenHandles",
         "start": "node index.js",
         "db:migrate": "sequelize db:migrate",
         "db:migrate:rollback": "sequelize db:migrate:undo:all",
         "db:seed": "sequelize-cli db:seed:all",
         "db:seed:one": "sequelize db:seed --seed",
         "db:seed:undo": "sequelize-cli db:seed:undo",
+        "db:create:test": "NODE_ENV=test npx sequelize-cli db:create",
+        "db:migrate:test": "NODE_ENV=test npx sequelize-cli db:migrate",
         "db:seed:make": "sequelize-cli seed:generate --name",
         "heroku-release": "node_modules/.bin/sequelize db:migrate"
 
